c4prj2_input/grade.txt
Grading at Sun Sep 30 07:48:30 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:37:30: error: lvalue required as left operand of assignment
       &fc->decks[i].cards[j] = &deck->cards[i];
                              ^
Compilation of future.c failed

Overall Grade: F
